# Kaleido

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/scripts/: doc_extractor.py  generate_md_files.py  generate_tex_images.py  utils.py
docs/tex/raw/conv1d/Conv1D/: get_output[S].tex  get_output[W].tex
networks/: __init__.py
networks/engines/: sequential.py
networks/layers/: __init__.py
networks/layers/activations/: __init__.py  base_activation.py  relu_family.py  soft_family.py  tanh_family.py
networks/layers/conv/: __init__.py  conv1d.py  conv2d.py  paddings.py
networks/layers/core/: __init__.py  base_layers.py  dense.py  input.py
networks/layers/preprocessing/: __init__.py  flatten.py  reshape.py
networks/losses/: __init__.py  base_loss.py  cross_entropy.py  mse.py
networks/optimizers/: __init__.py  adam.py  base_optimizer.py  sgd.py
networks/util/: __init__.py  array_manipulation.py  assertions.py  batcher.py  ctx_managers.py  dataset_utils.py  history.py  subclass_dispatcher.py
pretrained/mnist/models/: mnist-92p.pkl
pretrained/mnist/notebooks/: model_mlp.ipynb  use_model.ipynb  use_model.py
tests/: test_activations.py  test_history.py  test_layers.py  test_losses.py  test_optimizers.py  test_util.py
